--- a/university.html
+++ b/university.html
@@ -26,9 +26,9 @@
 			<div id="content">
 			<img id= "image4"; src="f4.jpg" alt="a photo">
 				  <p class= "ex">It has been one year since I have started studying at LCC Internarial University, and I have already learned a lot. Before I began, my English was inadequate for a student who wants to study at university. Fortunately, there is a program which students who are not very good at English language go through. I enrolled in that program (PRIM), and it really helped to improve my English skills.</p>
-			<img id= "image3" src="F3.jpg" alt="a photo">
+			<img id= "image3" src="f3.jpg" alt="a photo">
 				<p>Currently, I am studying BA in international relations and development. Frankly, I have learned a lot since I have cmae here. Beside the language, now I have a great deal of knowledge about economy, video production, web designing, and many other stuff. The most interesting thing about LCC is that it is international university and it has students from all over the world<strong> (from 38 countries).</strong> So, it is a great chance to get to meet different people and learn about their culture. Come join me and let’s learn!</p>
-			<img id= "image5" src="F5.jpg" alt="a photo">
+			<img id= "image5" src="f5.jpg" alt="a photo">
 			</div>
 			<div id="footer">
 				<p>Join me! Let’s experience this together </p>
